# devaluation

./: app.py  chatpdf.py  pyproject.toml  rag.py
